Styling fix on smaller screens

--- a/src/app/personal-website/personal-website.component.css
+++ b/src/app/personal-website/personal-website.component.css
@@ -301,7 +301,7 @@ hr {
 }
 
 .info-block {
-    display: inline-flex;
+    display: inline-block;
 }
 
 .title-left {
